import BasicEdge from '../Basic/BasicEdge.js';

export default class TreeEdge extends BasicEdge {}
