import State from '../State.js';
import Tree from '../Tree/Tree.js';

export default class WeightedTree extends Tree {
	/// Constructor
	constructor(state: State) {
		super(state);
	}
}
